fixed bug in EliminateEmptyAlternatives